<resources>
    <string name="app_name">Volunteers</string>
    <string name="Login">Username/Number</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword"><u>ForgotPassword?</u></string>
    <string name="ResetPassword">Reset Password</string>
    <string name="SignUp"><u>SignUp</u></string>
    <string name="Button">Sign-In</string>
    <string name="ShowPassword">ShowPassword</string>
    <string name="LoginPage">Login-Page</string>
    <string name="NewPassword">NewPassword</string>
    <string name="ConfirmNewPassword">ConfirmPassword</string>
    <string name="Reset">Reset</string>
    <string name="changepassword">Change Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="approved">Approved</string>
    <string name="waitlisted">Waitlisted</string>

    <string name="list_of_events">LIST OF EVENTS</string>


    <string name="Report">Report</string>
    <string name="ReportName">UserName/Email</string>
    <string name="reportsubmit">Submit</string>
    <string name="reportemail">Email</string>
    <string name="reportevent">Event he/she in</string>
    <string name="reportreason">Reason</string>

    <string name="feedback">FeedBack</string>
    <string name="feedbackname">Name</string>
    <string name="feedbackemail">Email</string>
    <string name="feedbacksubject">Subject</string>
    <string name="feedbacksuggestions">Suggestions</string>
    <string name="feedbacksubmit">Send Feedback</string>
</resources>


