<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Report"
            android:textColor="@color/buttonColor"
            android:layout_marginBottom="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textAllCaps="true"
            android:layout_gravity="center"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ReportName"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:id="@+id/reportName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reportevent"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:id="@+id/reportevent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reportreason"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="textMultiLine"
                android:id="@+id/reportreason"/>
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send me a copy"
            android:textColor="@color/buttonColor"
            android:buttonTint="@color/buttonColor"
            android:id="@+id/box"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reportemail"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:id="@+id/reportemail"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reportsubmit"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:id="@+id/reportsubmit"/>

    </LinearLayout>
</ScrollView>